--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,14 @@
+@import "./color";
+
+@import "./header";
+
+@import "./first-page";
+
+@import "./animation";
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #000;
+
 }
