--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -1,13 +1,14 @@
 .logo-img {
-    position: absolute;
+    position: relative;
+    overflow: hidden;
     top: 50%;
     left: 50%;
     width: 120px;
     height: 120px;
     margin: -60px 0 0 -60px;
-    -webkit-animation: spin 4s linear infinite;
-    -moz-animation: spin 4s linear infinite;
-    animation: spin 4s linear infinite;
+    -webkit-animation: spin 6s linear infinite;
+    -moz-animation: spin 6s linear infinite;
+    animation: spin 6s linear infinite;
 }
 
 @-moz-keyframes spin {
