--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,12 @@
 @import "./color";
 
+@import "./navbar";
+
 @import "./header";
 
-@import "./first-page";
-
 @import "./animation";
+
+@import "./about";
 
 * {
     box-sizing: border-box;
