--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,48 @@
-header {
-  background-color: #91a8ba;
+@charset "UTF-8";
+.navbar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: fixed;
+  align-items: center;
+  width: 100vw;
+  color: #cf3212;
+  background-color: #e7f3fc;
+  padding: 1.5rem;
+}
+.navbar-container ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.navbar-container ul a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: ocr-b-std;
+  font-size: 1.5em;
+  color: #cf3212;
+  padding: 1rem;
+}
+.navbar-container ul a:hover {
+  color: black;
+  /*ÄNDRA*/
 }
 
-.first-page-container {
+.header-container {
   width: 100vw;
   height: 100vh;
-  margin: 0%;
   color: #cf3212;
 }
-.first-page-container .first-page-content {
+.header-container .header-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   height: 100vh;
 }
-.first-page-container .first-page-content .logo-container {
-  padding-top: 25%;
+.header-container .header-content .logo-container {
   padding-bottom: 4rem;
-}
-.first-page-container .first-page-content .background-img {
-  width: 390px;
-  justify-content: baseline;
-  /*padding-top: 5rem;*/
 }
 
 .logo-img {
@@ -46,9 +66,32 @@ header {
     transform: rotate(360deg);
   }
 }
+.about-container {
+  width: 100%;
+  height: 590px;
+  border-radius: 5px;
+  border: 5px solid #cf3212;
+  padding: 2rem;
+}
+.about-container .about-content {
+  color: #cf3212;
+}
+.about-container .about-content h2 {
+  font-family: kepler-std, serif;
+  font-weight: 700;
+  font-style: normal;
+  text-align: center;
+  padding-top: 1rem;
+}
+.about-container .about-content p {
+  font-family: ocr-b-std;
+  line-height: 1.5;
+  padding-top: 2rem;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #91a8ba;
+  background-color: #e7f3fc;
 }
