--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,12 +1,18 @@
 .about-container {
 
     width: 100%;
-    height: 590px;
-    border-radius: 5px;
+    height: fit-content;
     border: 5px solid $text-color;
     padding: 2rem;
+    border-radius: 25px;
+    margin-bottom: 1rem;
+
 
     .about-content {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
         color: $text-color;
 
@@ -23,6 +29,12 @@
             font-family: ocr-b-std;
             line-height: 1.5;
             padding-top: 2rem;
+
+        }
+
+        .icon {
+            padding-top: 2rem;
+            padding-bottom: 2rem;
 
         }
 
