--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: fixed;
     align-items: center;
+    position: fixed;
+    z-index: 1;
+
 
     width: 100vw;
 
@@ -33,7 +35,7 @@
 
             &:hover {
                 color: black;
-                /*ÄNDRA*/
+
             }
 
         }
