--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -1,6 +1,6 @@
 .work-container {
 
-    height: 100vh;
+    height: fit-content;
     width: auto;
     padding: 2rem;
     border: 5px solid $text-color;
@@ -10,6 +10,8 @@
     margin-bottom: 1rem;
 
 
+
+
     h2 {
         font-family: kepler-std, serif;
         font-weight: 700;
@@ -17,6 +19,58 @@
         text-align: center;
         padding-top: 1rem;
 
+    }
+
+    .row {
+        margin: 8px -16px;
+    }
+
+    /* Add padding BETWEEN each column (if you want) */
+    .row,
+    .row>.column {
+        padding: 8px;
+    }
+
+    /* Create four equal columns that floats next to each other */
+    .column {
+        float: left;
+        width: 25%;
+    }
+
+    /* Clear floats after rows */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    /* Content */
+    .content {
+        background-color: white;
+        padding: 10px;
+        border: 2px solid $text-color;
+        box-shadow: 4px 4px 2px 1px rgba(0, 0, 255, .2);
+
+        h3 {
+            font-family: ocr-b-std;
+            text-align: center;
+            background-color: white;
+        }
+    }
+
+
+    /* Responsive layout - makes a two column-layout instead of four columns */
+    @media screen and (max-width: 900px) {
+        .column {
+            width: 50%;
+        }
+    }
+
+    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+    @media screen and (max-width: 600px) {
+        .column {
+            width: 100%;
+        }
     }
 
 
