--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,16 @@
   width: 100vw;
   color: #cf3212;
   background-color: #e7f3fc;
-  padding: 1.5rem;
+  padding: 2rem;
   border-bottom: 5px solid #cf3212;
 }
 .navbar-container ul {
+  width: 100vw;
   list-style: none;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  /*FIXA DETTA DET ÄR SKUMT*/
 }
 .navbar-container ul a {
   text-decoration: none;
@@ -24,7 +26,7 @@
   font-family: ocr-b-std;
   font-size: 1.5em;
   color: #cf3212;
-  padding: 1rem;
+  /*padding: 1.5rem;*/
 }
 .navbar-container ul a:hover {
   color: black;
