--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .navbar-container {
   display: flex;
   flex-direction: row;
@@ -18,7 +17,6 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  /*FIXA DETTA DET ÄR SKUMT*/
 }
 .navbar-container ul a {
   text-decoration: none;
@@ -26,10 +24,16 @@
   font-family: ocr-b-std;
   font-size: 1.5em;
   color: #cf3212;
-  /*padding: 1.5rem;*/
+  padding: 0.3rem;
 }
 .navbar-container ul a:hover {
   color: black;
+}
+@media screen and (min-width: 800px) {
+  .navbar-container ul a {
+    padding: 2rem;
+    padding-bottom: 0%;
+  }
 }
 
 .header-container {
@@ -90,7 +94,6 @@
   padding: 2rem;
   border-radius: 25px;
   margin-bottom: 1rem;
-  /*box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);*/
 }
 .about-container .about-content {
   display: flex;
@@ -114,7 +117,18 @@
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+@media screen and (min-width: 880px) {
+  .about-container {
+    width: 880px;
+  }
+}
 
+@media screen and (min-width: 880px) {
+  .about-container-container {
+    display: flex;
+    justify-content: center;
+  }
+}
 .work-container {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -125,12 +139,6 @@
   color: #cf3212;
   border-radius: 25px;
   margin-bottom: 1rem;
-  /* Add padding BETWEEN each column (if you want) */
-  /* Create four equal columns that floats next to each other */
-  /* Clear floats after rows */
-  /* Content */
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 }
 .work-container h2 {
   font-family: kepler-std, serif;
@@ -143,10 +151,10 @@
   margin: 8px -16px;
 }
 .work-container .row,
-.work-container .row > .column {
+.work-container .row > .gallery-column {
   padding: 8px;
 }
-.work-container .column {
+.work-container .gallery-column {
   float: left;
   width: 25%;
 }
@@ -155,24 +163,25 @@
   display: table;
   clear: both;
 }
-.work-container .content {
+.work-container .gallery-content {
   background-color: white;
   padding: 10px;
   border: 2px solid #cf3212;
   box-shadow: 4px 4px 2px 1px rgba(0, 0, 255, 0.2);
 }
-.work-container .content h3 {
+.work-container .gallery-content h3 {
   font-family: ocr-b-std;
+  text-transform: uppercase;
   text-align: center;
   background-color: white;
 }
 @media screen and (max-width: 900px) {
-  .work-container .column {
+  .work-container .gallery-column {
     width: 50%;
   }
 }
 @media screen and (max-width: 600px) {
-  .work-container .column {
+  .work-container .gallery-column {
     width: 100%;
   }
 }
@@ -207,7 +216,6 @@
 }
 .footer-container .footer-content ul li a:hover {
   color: black;
-  /*ÄNDRA*/
 }
 
 * {
