--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -5,7 +5,6 @@
     padding: 2rem;
     border: 5px solid $text-color;
     color: $text-color;
-
     border-radius: 25px;
     margin-bottom: 1rem;
 
@@ -25,27 +24,23 @@
         margin: 8px -16px;
     }
 
-    /* Add padding BETWEEN each column (if you want) */
     .row,
-    .row>.column {
+    .row>.gallery-column {
         padding: 8px;
     }
 
-    /* Create four equal columns that floats next to each other */
-    .column {
+    .gallery-column {
         float: left;
         width: 25%;
     }
 
-    /* Clear floats after rows */
     .row:after {
         content: "";
         display: table;
         clear: both;
     }
 
-    /* Content */
-    .content {
+    .gallery-content {
         background-color: white;
         padding: 10px;
         border: 2px solid $text-color;
@@ -53,26 +48,22 @@
 
         h3 {
             font-family: ocr-b-std;
+            text-transform: uppercase;
             text-align: center;
             background-color: white;
         }
     }
 
-
-    /* Responsive layout - makes a two column-layout instead of four columns */
     @media screen and (max-width: 900px) {
-        .column {
+        .gallery-column {
             width: 50%;
         }
     }
 
-    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 600px) {
-        .column {
+        .gallery-column {
             width: 100%;
         }
     }
-
-
 
 }
